Fix weather info on smaller devices

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -97,3 +97,16 @@ body {
   font-size: 2em;
   padding-top: 2em;
 }
+
+@media only screen and (max-width: 768px) and (min-width: 576px) {
+  .weather-info {
+    width: 90%;
+  }
+
+}
+
+@media only screen and (max-width: 576px) {
+  .weather-info {
+    width: 100%;
+  }
+}
